html van de eerste pagina's gemaakt en de css in de map gezet

--- a/login.html
+++ b/login.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-    
+    <H1>login</H1>
+    <form>
+        <label for="Gebruikersnaam">Gebruikersnaam</label><br>
+        <input type="text" name="Gebruikersnaam" id="Gebruikersnaam"><br>
+        <label for="Wachtwoord">Wachtwoord</label><br>
+        <input type="text" name="Wachtwoord" id="Wachtwoord"><br>
+    </form>
+    <p>heb je nog geen account? klik <a href="registreren.html">Hier</a></p>
+    <button>inloggen</button>
 </body>
 </html>
