--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/homepage.css">
 </head>
 <body>
     <h1>Welkom Gebruiker</h1>
-    <h2>Om in te loggen klik <a href= "login.html">Hier</a></h2>
-    <h2>Om te registreren klik <a href="registreren.html">Hier</a></h2>
+    <p>Om in te loggen klik <a href= "login.html">Hier</a></p>
+    <p>Om te registreren klik <a href="registreren.html">Hier</a></p>
 </body>
 </html>
