login en index een paar aanpassingen gemaakt en dashboard.thml aangemaakt

--- a/login.html
+++ b/login.html
@@ -18,7 +18,8 @@
 
       <p class="link">heb je nog geen account? klik <a href="registreren.html">hier</a></p>
 
-      <button type="submit" class="login-button">inloggen</button>
+      <a href="dashboard.html" class="login-button">Inloggen</a>
+
     </form>
   </div>
 </body>
