--- a/login.html
+++ b/login.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-    
+  <div class="login-container">
+    <div class="login-header">Login</div>
+    <form>
+      <label for="gebruikersnaam">Gebruikersnaam</label>
+      <input type="text" id="gebruikersnaam" name="gebruikersnaam">
+
+      <label for="wachtwoord">Wachtwoord</label>
+      <input type="password" id="wachtwoord" name="wachtwoord">
+
+      <p class="link">heb je nog geen account? klik <a href="registreren.html">hier</a></p>
+
+      <button type="submit" class="login-button">inloggen</button>
+    </form>
+  </div>
 </body>
 </html>
