--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/homepage.css">
-    <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
-
 </head>
 <body>
-    <h1>Welkom Gebruiker</h1>
-    <h2>Om in te loggen klik <a href= "login.html">Hier</a></h2>
-    <h2>Om te registreren klik <a href="registreren.html">Hier</a></h2>
+<navbar class="navbar">
+ <div class="logo">
+<img src="images/Screenshot_2025-06-18_133819-removebg-preview.png">
+ </div>
+ <div class="profiel">
+<img src="images/p2.png"> 
+</div>
+
+</navbar>
+    <div class="background">
+        <img src="images/green energie.webp" style="display: block; width: 100%;">
+        <div class="text">
+            <h1>Welkom Gebruiker</h1>
+            <p>Om in te loggen klik <a href="login.html">hier</a>
+            <p>Om te registreren klik <a href="registreren.html">hier</a>
+        </div>
+    </div>
 </body>
 </html>
